PRJ_VER=1.2.0.20100210
SUMMARY= Revert the change that fix Google issue 758.
# Changes
- Revert the change that fix Google issue 758.
- Remove "tag" target, add "commit" which do commit and tag.
