@@ -1,3 +1,7 @@
+* Tue Feb 09 2010 Ding-Yi Chen <dchen at redhat.com> - 1.2.0.20100210-1
+- Revert the change that fix Google issue 758.
+- Remove "tag" target, add "commit" which do commit and tag.
+
 * Tue Feb 09 2010 Ding-Yi Chen <dchen at redhat.com> - 1.2.0.20100209-1
 - Fixed Google issue 754: commit string is missing when inputting
   long English text in the end.
@@ -155,6 +159,7 @@ Fix the errors which Funda Wang as pointing out:
 
 * Fri Aug 15 2008 Huang Peng <shawn.p.huang@gmail.com> - 0.1.1.20081023-1
 - The first version.
+
 
 
 
